# accessibile-da-zero

./: .gitignore  README.md
.github/workflows/: release-windows-exe.yml
examples/: pacchetto-demo.html  pacchetto-links-CHECKLIST.md  pacchetto-links.html
python-app/: README.md  build_exe.ps1  pyproject.toml  requirements-build.txt
python-app/accessibile_da_zero/: __init__.py  __main__.py  checklist.py  cli.py  docx_gen.py  gui.py  html_gen.py
