[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "accessibile-da-zero-germanocosti"
version = "0.1.1"
description = "Generatore DOCX/HTML con struttura accessibile + checklist (Italia)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Germano Costi" }]
dependencies = [
  "python-docx>=1.1.2",
]

[project.urls]
Homepage = "https://github.com/GermanoCosti/accessibile-da-zero"
Repository = "https://github.com/GermanoCosti/accessibile-da-zero"
Issues = "https://github.com/GermanoCosti/accessibile-da-zero/issues"

[project.scripts]
accessibile-da-zero = "accessibile_da_zero.cli:main"
accessibile-da-zero-gui = "accessibile_da_zero.gui:main"

[tool.setuptools.packages.find]
where = ["."]
